[package]
name = "ppc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ppc"
path = "src/lib.rs"

[[bin]]
name = "redirector"
path = "src/bin/redirector.rs" # replace bin.rs with name of your file

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"]}
reqwest = { version = "0.11", features = ["json"] }
actix-web = "4"
log = "0.4.0"
env_logger = "0.9.0"
clap = { version = "4.0.2", features = ["derive"] }
maxminddb = "0.23.0"